--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <script src="./config.js"></script>
   </head>
   <body>
+    <!-- nav Bar -->
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand">Navbar</a>
