--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                   <h5 class="title">${data.title}</h5>
                   <p class="date">${data.date}</p>
                   <p class="price">${data.price}원</p>
-                  <p class="float-end">${data.price}원</p>
+                  <p class="float-end">❤️ 0</p>
                 </div>
               </div>
               `;
