--- a/public/upload.html
+++ b/public/upload.html
@@ -20,6 +20,7 @@
     <script src="./config.js"></script>
   </head>
   <body>
+    <!-- nav Bar -->
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand">Navbar</a>
@@ -42,6 +43,21 @@
     <script>
       // Firebase 초기화
       firebase.initializeApp(firebaseConfig);
+    </script>
+
+    <script>
+      const db = firebase.firestore();
+
+      // 가져오기
+      // firebase DB collection
+      // db.collection('product')
+
+      // upload
+      // 'db collection', db.collection('넣을 테이블명').doc.set({넣을 데이터]});
+
+      //db.collection('products')
+      //.doc('product4')
+      // .set({ title: '핸드워시', prcie: 20000, date: '2025-05-27' });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
