--- a/public/upload.html
+++ b/public/upload.html
@@ -33,7 +33,7 @@
 
     <div class="container mt-3">
       <input type="text" class="form-control mt-2" id="title" placeholder="title" />
-      <textarea class="form-control mt-2" id="content">content</textarea>
+      <textarea class="form-control mt-2" id="content" placeholder="content"></textarea>
       <input type="text" class="form-control mt-2" id="price" placeholder="price" />
       <input class="form-control mt-2" type="file" id="image" />
       <button class="btn btn-danger mt-3" id="send">올리기</button>
@@ -55,14 +55,27 @@
         const content = document.querySelector('#content').value;
         //price
         const price = +document.querySelector('#price').value;
+        // date
+        const date = new Date().toLocaleDateString('en-CA');
 
-        const formData = { title: title, content: content, prie: price };
+        const formData = { title: title, content: content, price: price, date: date };
+        // console
         console.log(formData);
 
         // db 가져오기
         const db = firebase.firestore();
 
-        db.collection('products').add(formData);
+        db.collection('products')
+          .add(formData)
+          .then(res => {
+            console.log('Res', res);
+            alert('등록 완료했습니다!');
+            window.location.href = '/public/index.html';
+          })
+          .catch(e => {
+            alert(`다시 시도해주세요 ${e}`);
+            console.log(e);
+          });
       });
     </script>
 
