--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-storage-compat.js"></script>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
@@ -45,7 +46,7 @@
       // data 가져오기
       document.addEventListener('DOMContentLoaded', () => {
         const db = firebase.firestore();
-        console.log('Firestore initialized');
+        // console.log('Firestore initialized');
 
         db.collection('products')
           .get()
@@ -53,15 +54,18 @@
             console.log('Products retrieved:', snapshot.size);
             snapshot.docs.forEach(product => {
               // console
-              console.log('product', product.data());
+              // console.log('product', product.data());
 
               // 상품 data
               const data = product.data();
+              console.log('data', data);
 
               // html 동적 생성
               const template = `
               <div class="product">
-                <div class="thumbnail" style="background-image: url('./500x500_01.png')"></div>
+                <div class="thumbnail" style="background-image: url(${
+                  data.image ? data.image : './500x500_01.png'
+                })"></div>
                 <div class="flex-grow-1 p-4">
                   <h5 class="title">${data.title}</h5>
                   <p class="date">${data.date}</p>
