--- a/public/upload.html
+++ b/public/upload.html
@@ -9,6 +9,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-storage-compat.js"></script>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
@@ -48,25 +49,46 @@
     <script>
       // form 제출
       document.querySelector('#send').addEventListener('click', () => {
-        console.log('제출!');
+        const db = firebase.firestore(); // db 가져오기
+
+        // img -> firebase storage 저장
+        const storage = firebase.storage(); // storage 가져오기
+        let storageRef = storage.ref();
+
         // title
         const title = document.querySelector('#title').value;
         //content
         const content = document.querySelector('#content').value;
         //price
         const price = +document.querySelector('#price').value;
+        // img
+        const image = document.querySelector('#image').files[0];
         // date
         const date = new Date().toLocaleDateString('en-CA');
 
-        const formData = { title: title, content: content, price: price, date: date };
-        // console
-        console.log(formData);
+        const path = storageRef.child('image/' + Date.now() + '_' + image.name); // 고유한 파일명
+        const imgUpload = path.put(image); // 업로드 작업
 
-        // db 가져오기
-        const db = firebase.firestore();
+        imgUpload
+          .then(snapshot => {
+            console.log('success upload');
+            return snapshot.ref.getDownloadURL();
+          })
+          .then(downloadURL => {
+            console.log('down url', downloadURL);
 
-        db.collection('products')
-          .add(formData)
+            const formData = {
+              title: title,
+              content: content,
+              price: price,
+              date: date,
+              image: downloadURL,
+            };
+            // console
+            console.log(formData);
+
+            return db.collection('products').add(formData);
+          })
           .then(res => {
             console.log('Res', res);
             alert('등록 완료했습니다!');
