--- a/public/detail.html
+++ b/public/detail.html
@@ -41,7 +41,7 @@
         <h5>올린사람 : ??</h5>
         <hr />
         <h5 class="title">상품명</h5>
-        <p class="date">올린날짜</p>
+        <p class="date">created at</p>
         <p class="price">가격</p>
       </div>
     </div>
@@ -52,7 +52,9 @@
       firebase.initializeApp(firebaseConfig);
     </script>
 
-    <script></script>
+    <script>
+      //
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
   </body>
