--- a/public/detail.html
+++ b/public/detail.html
@@ -43,7 +43,6 @@
     </script>
 
     <script>
-      //
       const db = firebase.firestore();
       const storage = firebase.storage();
 
@@ -51,37 +50,47 @@
       const productURL = new URL(window.location.href);
       const productId = productURL.searchParams.get('id');
 
+      console.log('Product ID:', productId); // 디버깅용
+
       // product collection
       db.collection('products')
         .doc(productId)
         .get()
         .then(res => {
           console.log(res.data());
-          const product = res.data(); // 단일 객체
-          const documentId = res.id; // 문서 ID
 
-          // 단일 상품 데이터 처리
-          const template = `
-            <div class="container">
-              <h2>상세페이지</h2>
-              <div class="detail-pic my-4" style="background-image: url('${
-                product.image ? product.image : './500x500_01.png'
-              }'); width: 100%; height: 400px; background-size: cover; background-position: center;"></div>
-              <div>
-                <h5>상품 ID: ${documentId}</h5>
-                <hr />
-                <h5 class="title">${product.title}</h5>
-                <p class="date">등록일: ${product.date}</p>
-                <p class="price">가격: ${product.price}원</p>
-                <p class="content">설명: ${product.content}</p>
+          if (res.exists) {
+            const product = res.data(); // 단일 객체
+            const documentId = res.id; // 문서 ID
+
+            // 단일 상품 데이터 처리 (배열이 아님!)
+            const template = `
+              <div class="container">
+                <h2>상세페이지</h2>
+                <div class="detail-pic my-4" style="background-image: url('${
+                  product.image ? product.image : './500x500_01.png'
+                }'); width: 100%; height: 400px; background-size: cover; background-position: center;"></div>
+                <div>
+                  <h5>상품 ID: ${documentId}</h5>
+                  <hr />
+                  <h5 class="title">${product.title}</h5>
+                  <p class="date">등록일: ${product.date}</p>
+                  <p class="price">가격: ${product.price}원</p>
+                  <p class="content">설명: ${product.content}</p>
+                </div>
               </div>
-            </div>
-          `;
+            `;
 
-          document.querySelector('.container').innerHTML += template;
+            document.querySelector('.container').innerHTML = template;
+          } else {
+            window.location.href = '/';
+            document.querySelector('.container').innerHTML = '<p>상품을 찾을 수 없습니다.</p>';
+          }
         })
         .catch(err => {
           console.error('Firestore 에러:', err);
+          document.querySelector('.container').innerHTML =
+            '<p>데이터를 불러오는 중 오류가 발생했습니다.</p>';
         });
     </script>
 
