--- a/public/signin.html
+++ b/public/signin.html
@@ -74,6 +74,11 @@
       });
     </script>
 
+    <script>
+      /** login 여부 확인 */
+      firebase.auth().;
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
