--- a/public/signup.html
+++ b/public/signup.html
@@ -70,8 +70,13 @@
           .createUserWithEmailAndPassword(email, password)
           .then(res => {
             console.log('signup success', res);
-            console.log(res.user);
-            res.user.updateProfile({ displayNmae: username });
+            return res.user.updateProfile({ displayName: username });
+          })
+          .then(() => {
+            const currentUser = firebase.auth().currentUser;
+            console.log('Updated user:', currentUser);
+            console.log('Display Name:', currentUser.displayName);
+
             alert('회원가입에 성공했습니다!');
             window.location.href = 'index.html';
           })
