--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,10 @@
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand">carrot</a>
-        <a class="btn btn-outline-success" href="/signin.html">로그인</a>
-        <a class="btn btn-outline-success" href="/signup.html">회원가입</a>
+        <span class="userName ms-auto mr-2"></span>
+        <a class="signin btn btn-outline-success" href="/signin.html">로그인</a>
+        <a class="signup btn btn-outline-success" href="/signup.html">회원가입</a>
+        <a class="logout btn btn-outline-success d-none" href="/signup.html">로그아웃</a>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
           <button class="btn btn-outline-success" type="submit">Search</button>
@@ -85,6 +87,19 @@
           .catch(err => {
             console.error('Firestore 에러:', err);
           });
+      });
+
+      firebase.auth().onAuthStateChanged(user => {
+        if (user) {
+          // 로그인 /회원가입 버튼 없애기
+          document.querySelector('.signin').style.display = 'none';
+          document.querySelector('.signup').style.display = 'none';
+          // 로그아웃 보여주기
+          document.querySelector('.logout').classList.remove('d-none');
+
+          const userInfo = JSON.parse(localStorage.getItem('user'));
+          document.querySelector('.userName').innerHTML = userInfo.displayName;
+        }
       });
     </script>
 
