--- a/public/upload.html
+++ b/public/upload.html
@@ -46,6 +46,8 @@
       firebase.initializeApp(firebaseConfig);
     </script>
 
+    <script src="./auth.js"></script>
+
     <script>
       // form 제출
       document.querySelector('#send').addEventListener('click', () => {
