--- a/public/detail.html
+++ b/public/detail.html
@@ -25,8 +25,11 @@
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand">carrot</a>
-        <a class="btn btn-outline-success" href="/signin.html">로그인</a>
-        <a class="btn btn-outline-success" href="/signup.html">회원가입</a>
+        <span class="userName ms-auto mr-2"></span>
+        <a class="signin btn btn-outline-success" href="/signin.html">로그인</a>
+        <a class="signup btn btn-outline-success" href="/signup.html">회원가입</a>
+        <a class="logout btn btn-outline-success d-none" href="/signup.html">로그아웃</a>
+        <a class="write-board btn btn-outline-success d-none" href="/signup.html">글쓰기</a>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
           <button class="btn btn-outline-success" type="submit">Search</button>
