--- a/public/detail.html
+++ b/public/detail.html
@@ -29,7 +29,7 @@
         <a class="signin btn btn-outline-success" href="/signin.html">로그인</a>
         <a class="signup btn btn-outline-success" href="/signup.html">회원가입</a>
         <a class="logout btn btn-outline-success d-none" href="/signup.html">로그아웃</a>
-        <a class="write-board btn btn-outline-success d-none" href="/signup.html">글쓰기</a>
+        <a class="write-board btn btn-outline-success d-none" href="/upload.html">글쓰기</a>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
           <button class="btn btn-outline-success" type="submit">Search</button>
@@ -72,6 +72,7 @@
             const template = `
               <div class="container">
                 <h2>상세페이지</h2>
+                <button class="btn btn-outline-success">수정</button>
                 <div class="detail-pic my-4" style="background-image: url('${
                   product.image ? product.image : './500x500_01.png'
                 }'); width: 100%; height: 400px; background-size: cover; background-position: center;"></div>
