--- a/public/edit.html
+++ b/public/edit.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Carrot</title>
+    <title>Carrot edit</title>
 
     <!-- Firebase SDK를 CDN에서 직접 로드 -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
@@ -37,9 +37,7 @@
       </div>
     </nav>
 
-    <div class="container mt-3">
-      <div class="product"></div>
-    </div>
+    <div class="container"></div>
 
     <!-- Firebase 초기화 스크립트 -->
     <script>
@@ -48,48 +46,58 @@
     </script>
 
     <script src="./auth.js"></script>
+
     <script>
-      // data 가져오기
-      document.addEventListener('DOMContentLoaded', () => {
-        const db = firebase.firestore();
-        // console.log('Firestore initialized');
+      const db = firebase.firestore();
+      const storage = firebase.storage();
 
-        db.collection('products')
-          .get()
-          .then(snapshot => {
-            console.log('Products retrieved:', snapshot.size);
-            snapshot.docs.forEach(product => {
-              // console
-              // console.log('product', product.data());
+      // url -> 상품 ID 추출
+      const productURL = new URL(window.location.href);
+      const productId = productURL.searchParams.get('id');
 
-              // 상품 data
-              const data = product.data();
+      console.log('Product ID:', productId); // 디버깅용
 
-              // console.log('data', data);
+      // product collection
+      db.collection('products')
+        .doc(productId)
+        .get()
+        .then(res => {
+          console.log(res.data());
 
-              // html 동적 생성
-              const template = `
-              <div class="product">
-                <div class="thumbnail" style="background-image: url(${
-                  data.image ? data.image : './500x500_01.png'
-                })"></div>
-                <div class="flex-grow-1 p-4">
-                  <a href='/detail.html?id=${product.id}'>
-                    <h5 class="title">${data.title}</h5>
-                  </a>
-                  <p class="date">${data.date}</p>
-                  <p class="price">${data.price}원</p>
-                  <p class="float-end">❤️ 0</p>
+          if (res.exists) {
+            const product = res.data(); // 단일 객체
+            const documentId = res.id; // 문서 ID
+
+            // 단일 상품 데이터 처리 (배열이 아님!)
+            const template = `
+              <div class="container">
+                <h2>상세페이지</h2>
+                <button class="btn btn-outline-success">수정</button>
+                <div class="detail-pic my-4" style="background-image: url('${
+                  product.image ? product.image : './500x500_01.png'
+                }'); width: 100%; height: 400px; background-size: cover; background-position: center;"></div>
+                <div>
+                  <h5>상품 ID: ${documentId}</h5>
+                  <hr />
+                  <h5 class="title">${product.title}</h5>
+                  <p class="date">등록일: ${product.date}</p>
+                  <p class="price">가격: ${product.price}원</p>
+                  <p class="content">설명: ${product.content}</p>
                 </div>
               </div>
-              `;
-              document.querySelector('.container').innerHTML += template;
-            });
-          })
-          .catch(err => {
-            console.error('Firestore 에러:', err);
-          });
-      });
+            `;
+
+            document.querySelector('.container').innerHTML = template;
+          } else {
+            window.location.href = '/';
+            document.querySelector('.container').innerHTML = '<p>상품을 찾을 수 없습니다.</p>';
+          }
+        })
+        .catch(err => {
+          console.error('Firestore 에러:', err);
+          document.querySelector('.container').innerHTML =
+            '<p>데이터를 불러오는 중 오류가 발생했습니다.</p>';
+        });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
