--- a/public/upload.html
+++ b/public/upload.html
@@ -24,7 +24,12 @@
     <!-- nav Bar -->
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand">Navbar</a>
+        <a class="navbar-brand">carrot</a>
+        <span class="userName ms-auto mr-2"></span>
+        <a class="signin btn btn-outline-success" href="/signin.html">로그인</a>
+        <a class="signup btn btn-outline-success" href="/signup.html">회원가입</a>
+        <a class="logout btn btn-outline-success d-none" href="/signup.html">로그아웃</a>
+        <a class="write-board btn btn-outline-success d-none" href="/upload.html">글쓰기</a>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
           <button class="btn btn-outline-success" type="submit">Search</button>
@@ -67,6 +72,8 @@
         const image = document.querySelector('#image').files[0];
         // date
         const date = new Date().toLocaleDateString('en-CA');
+        // uid
+        const uid = userInfo.uid;
 
         const path = storageRef.child('image/' + Date.now() + '_' + image.name); // 고유한 파일명
         const imgUpload = path.put(image); // 업로드 작업
@@ -85,6 +92,7 @@
               price: price,
               date: date,
               image: downloadURL,
+              uid: uid,
             };
             // console
             console.log(formData);
@@ -94,7 +102,7 @@
           .then(res => {
             console.log('Res', res);
             alert('등록 완료했습니다!');
-            window.location.href = '/public/index.html';
+            window.location.href = '/';
           })
           .catch(e => {
             alert(`다시 시도해주세요 ${e}`);
