--- a/public/detail.html
+++ b/public/detail.html
@@ -77,12 +77,12 @@
                   product.image ? product.image : './500x500_01.png'
                 }'); width: 100%; height: 400px; background-size: cover; background-position: center;"></div>
                 <div>
-                  <h5>상품 ID: ${documentId}</h5>
+                  <p>작성자: ${product.username}</p>
                   <hr />
                   <h5 class="title">${product.title}</h5>
                   <p class="date">등록일: ${product.date}</p>
-                  <p class="price">가격: ${product.price}원</p>
-                  <p class="content">설명: ${product.content}</p>
+                  <p class="price">금액: ${product.price}원</p>
+                  <p class="content">${product.content}</p>
                 </div>
               </div>
             `;
