--- a/public/signup.html
+++ b/public/signup.html
@@ -51,6 +51,8 @@
       firebase.initializeApp(firebaseConfig);
     </script>
 
+    <script src="./auth.js"></script>
+
     <script>
       const db = firebase.firestore();
       const storage = firebase.storage();
