--- a/public/signin.html
+++ b/public/signin.html
@@ -49,6 +49,8 @@
       firebase.initializeApp(firebaseConfig);
     </script>
 
+    <script src="./auth.js"></script>
+
     <script>
       const db = firebase.firestore();
       const storage = firebase.storage();
