--- a/public/detail.html
+++ b/public/detail.html
@@ -72,7 +72,9 @@
             const template = `
               <div class="container">
                 <h2>상세페이지</h2>
-                <button class="btn btn-outline-success">수정</button>
+                <a class="edit btn btn-outline-success d-none" href="/edit.html?id=${
+                  product.uid
+                }">수정</a>
                 <div class="detail-pic my-4" style="background-image: url('${
                   product.image ? product.image : './500x500_01.png'
                 }'); width: 100%; height: 400px; background-size: cover; background-position: center;"></div>
@@ -88,6 +90,13 @@
             `;
 
             document.querySelector('.container').innerHTML = template;
+
+            const uid = JSON.parse(localStorage.getItem('user')).uid;
+            // 수정 버튼
+            if (uid === product.uid) {
+              const editBtn = document.querySelector('.edit');
+              editBtn.classList.remove('d-none');
+            }
           } else {
             window.location.href = '/';
             document.querySelector('.container').innerHTML = '<p>상품을 찾을 수 없습니다.</p>';
