--- a/public/edit.html
+++ b/public/edit.html
@@ -17,7 +17,6 @@
     />
     <link rel="stylesheet" href="./main.css" />
 
-    <!-- config.js 파일 로드 (경로 수정) -->
     <script src="./config.js"></script>
   </head>
   <body>
@@ -67,46 +66,115 @@
       // url -> 상품 ID 추출
       const productURL = new URL(window.location.href);
       const productId = productURL.searchParams.get('id');
-
       // console.log('Product ID:', productId);
+
+      let currentImageUrl = ''; // 현재 이미지 URL 저장
+      let newImageFile = null; // 새로 선택된 이미지 파일
 
       // product collection -> 특정 id 값에 대한 데이터
       db.collection('products')
         .doc(productId)
         .get()
-        .then(prd => {
-          const editProduct = prd.data();
-          console.log(editProduct);
+        .then(doc => {
+          if (doc.exists) {
+            const editProduct = doc.data();
+            console.log('Product data:', editProduct);
 
-          document.querySelector('.title').value = editProduct.title;
-          document.querySelector('.image').src = editProduct.image;
-          document.querySelector('.date').value = editProduct.date;
-          document.querySelector('.price').value = editProduct.price;
-          document.querySelector('.content').value = editProduct.content;
+            // 폼에 데이터 채우기
+            document.querySelector('.title').value = editProduct.title || '';
+            document.querySelector('.date').value = editProduct.date || '';
+            document.querySelector('.price').value = editProduct.price || '';
+            document.querySelector('.content').value = editProduct.content || '';
+
+            // 기존 이미지 표시
+            if (editProduct.image) {
+              currentImageUrl = editProduct.image;
+              document.querySelector('.image').src = editProduct.image;
+            }
+          } else {
+            alert('해당 게시글을 찾을 수 없습니다.');
+            window.location.href = '/index.html';
+          }
+        })
+        .catch(error => {
+          console.error('데이터 가져오기 오류:', error);
+          alert('데이터를 불러오는 중 오류가 발생했습니다.');
         });
 
-      // 수정 버튼 클릭 시
-      document.querySelector('.edit-btn').addEventListener('click', () => {
-        var editData = {
-          title: document.querySelector('.title').value,
-          image: document.querySelector('.image').src,
-          price: document.querySelector('.price').value,
-          date: new Date().toLocaleDateString('en-CA'),
-        };
+      // 이미지 파일 선택 시 미리보기
+      document.querySelector('.img-file').addEventListener('change', function (e) {
+        const file = e.target.files[0];
+        if (file) {
+          newImageFile = file; // 새 이미지 파일 저장
 
-        // update
-        db.collection('products')
-          .doc(productId)
-          .update(editData)
-          .then(() => {
-            console.log('✅ 업데이트 성공!');
-            alert('수정이 완료되었습니다!');
-            window.location.href = `/detail.html?id=${productId}`;
-          })
-          .catch(error => {
-            console.error('❌ 업데이트 실패:', error);
-            alert('수정 실패: ' + error.message);
-          });
+          // 미리보기 표시
+          const reader = new FileReader();
+          reader.onload = function (e) {
+            document.querySelector('.image').src = e.target.result;
+          };
+          reader.readAsDataURL(file);
+
+          console.log('새 이미지 파일 선택됨:', file.name);
+        }
+      });
+
+      // 수정 버튼 클릭 시
+      document.querySelector('.edit-btn').addEventListener('click', async () => {
+        const title = document.querySelector('.title').value.trim();
+        const price = document.querySelector('.price').value.trim();
+        const content = document.querySelector('.content').value.trim();
+
+        // 유효성 검사
+        if (!title || !price || !content) {
+          alert('모든 필드를 입력해주세요.');
+          return;
+        }
+
+        // 로딩 상태 표시
+        const btnText = document.querySelector('.btn-text');
+        const spinner = document.querySelector('.spinner-border');
+        const editBtn = document.querySelector('.edit-btn');
+
+        editBtn.disabled = true;
+
+        try {
+          let finalImageUrl = currentImageUrl; // 기본값은 기존 이미지
+
+          // 새 이미지가 선택된 경우 Firebase Storage에 업로드
+          if (newImageFile) {
+            console.log('새 이미지 업로드 시작...');
+
+            const storageRef = storage.ref();
+            const imageRef = storageRef.child('images/' + Date.now() + '_' + newImageFile.name);
+
+            // 이미지 업로드
+            const snapshot = await imageRef.put(newImageFile);
+            finalImageUrl = await snapshot.ref.getDownloadURL();
+
+            console.log('새 이미지 업로드 완료:', finalImageUrl);
+          }
+
+          // 업데이트할 데이터
+          const editData = {
+            title: title,
+            price: parseInt(price),
+            content: content,
+            image: finalImageUrl, // 새 이미지 URL 또는 기존 URL
+            updatedAt: new Date().toISOString(),
+          };
+
+          console.log('업데이트 데이터:', editData);
+
+          // Firestore 업데이트
+          await db.collection('products').doc(productId).update(editData);
+
+          console.log('✅ 업데이트 성공!');
+          alert('수정이 완료되었습니다!');
+          window.location.href = `/detail.html?id=${productId}`;
+        } catch (error) {
+          console.error('❌ 업데이트 실패:', error);
+          alert('수정 실패: ' + error.message);
+        }
       });
     </script>
 
