--- a/public/detail.html
+++ b/public/detail.html
@@ -72,9 +72,7 @@
             const template = `
               <div class="container">
                 <h2>상세페이지</h2>
-                <a class="edit btn btn-outline-success d-none" href="/edit.html?id=${
-                  product.uid
-                }">수정</a>
+                <a class="edit btn btn-outline-success d-none" href="/edit.html?id=${documentId}">수정</a>
                 <div class="detail-pic my-4" style="background-image: url('${
                   product.image ? product.image : './500x500_01.png'
                 }'); width: 100%; height: 400px; background-size: cover; background-position: center;"></div>
