--- a/public/upload.html
+++ b/public/upload.html
@@ -11,6 +11,23 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-storage-compat.js"></script>
 
+    <!-- Toast UI Editor -->
+    <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
+    <script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
+
+    <script>
+      window.addEventListener('DOMcontentLoad', () => {
+        const editor = new Editor({
+          el: document.querySelector('#editor'),
+          height: '500px',
+          window: '500px',
+          initialEditType: 'wysiwyg',
+          previewStyle: 'vertical',
+        });
+
+        editor.getMarkdown();
+      });
+    </script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -39,7 +56,8 @@
 
     <div class="container mt-3">
       <input type="text" class="form-control mt-2" id="title" placeholder="title" />
-      <textarea class="form-control mt-2" id="content" placeholder="content"></textarea>
+      <div id="editor"></div>
+      <textarea class="form-control mt-2" id="content" placeholder="content-textarea"></textarea>
       <input type="text" class="form-control mt-2" id="price" placeholder="price" />
       <input class="form-control mt-2" type="file" id="image" />
       <button class="btn btn-danger mt-3" id="send">올리기</button>
