--- a/public/edit.html
+++ b/public/edit.html
@@ -50,7 +50,7 @@
       설명: <input class="content" />
     </div>
 
-    <button type="submit" class="btn btn-outline-success">수정하기</button>
+    <button type="submit" class="edit-btn btn btn-outline-success">수정하기</button>
 
     <!-- Firebase 초기화 스크립트 -->
     <script>
@@ -68,7 +68,7 @@
       const productURL = new URL(window.location.href);
       const productId = productURL.searchParams.get('id');
 
-      console.log('Product ID:', productId); // 디버깅용
+      // console.log('Product ID:', productId);
 
       // product collection -> 특정 id 값에 대한 데이터
       db.collection('products')
@@ -80,11 +80,15 @@
 
           document.querySelector('.title').value = editProduct.title;
           document.querySelector('.image').src = editProduct.image;
-          document.querySelector('.img-file').data = editProduct.image;
           document.querySelector('.date').value = editProduct.date;
           document.querySelector('.price').value = editProduct.title;
           document.querySelector('.content').value = editProduct.content;
         });
+
+      // 수정 버튼 클릭 시
+      document.querySelector('.edit-btn').addEventListener('click', () => {
+        alert('!');
+      });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
