--- a/public/signup.html
+++ b/public/signup.html
@@ -89,7 +89,7 @@
           console.log('Display Name:', currentUser.displayName);
 
           alert('✅ 회원가입에 성공했습니다!');
-          window.location.href = 'index.html';
+          window.location.href = 'signin.html';
         } catch (e) {
           alert(`❌가입에 실패했습니다: ${e.message}`);
           console.log('error', e);
